--- a/final-project/css/style.css
+++ b/final-project/css/style.css
@@ -21,6 +21,13 @@
   border-radius: 5px;
 }
 
+.performance {
+  margin-bottom: 10px; 
+  padding: 5px 30px; 
+  background: #F0F0F0; 
+  border-radius: 5px;
+}
+
 .objective {
   margin-bottom: 30px; 
   padding: 3px 30px 3px 30px; 
